# blackhole-TensorRay-engine

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  rustfmt.toml  sim_log.txt  test_fabric  test_svg
engine/: CMakeLists.txt  Makefile  README.md  engine.c  engine.h  well.h
engine/assets/: image_loader.c  image_loader.h  svg_loader.c  svg_loader.h  texture_gen.c
engine/components/: components.h
engine/components/body/: README.md  body.h
engine/components/disk/: disk.c  disk.h
engine/core/: engine.c
engine/disk/: README.md  disk.c  disk.h
engine/ecs/: ecs.c  ecs.h  events.c  events.h
engine/geometry/: mesh_gen.c  mesh_gen.h
engine/integrator/: integrator.h
engine/physics/: integrator.c  integrator.h  physics_defs.h
engine/physics/geodesic/: README.md  geodesic.c  geodesic.h
engine/physics/spacetime/: spacetime.h  spacetime_physics.c
engine/planets/: blackhole.c  dwarf_planets.c  earth.c  mars.c  mercury.c  saturn.c  sun.c  uranus.c  venus.c
engine/presets/: presets.c  presets.h
engine/render_system/: render_system.c
engine/scene/: scene.c  scene.h
engine/shader/: bhs_shader_std.h
engine/shaders/: blackhole.comp
engine/spacetime/: spacetime.h
engine/systems/: README.md  celestial_system.c  celestial_system.h  gravity_system.c  gravity_system.h  physics_system.c  physics_system.h  render_system.c
engine/world/: world.c
framework/: CMakeLists.txt  Makefile  bhs_assert.h  log.c  log.h
framework/platform/cocoa/: README.md
framework/platform/wayland/: wl_context.c  wl_input.c  wl_internal.h  wl_window.c
framework/platform/x11/: x11.c
framework/rhi/: Makefile  README.md  renderer.h
framework/rhi/vulkan/: vk_buffer.c  vk_context.c  vk_internal.h  vk_pipeline.c  vk_swapchain.c  vk_sync.c  vk_texture.c
framework/tests/: CMakeLists.txt  test_input.c  test_lifecycle.c  test_rhi_boot.c  test_runner.h
framework/ui/: README.md  context.c  internal.h  layout.c  layout.h  lib.h  theme.c  theme.h  widgets.c
framework/ui/render/: README.md  render2d.c
framework/ui/window/: window.c
gui/: CMakeLists.txt  README.md  bhs_assert.h  log.c  log.h
gui-framework/: CMakeLists.txt  bhs_assert.h  log.c  log.h
gui-framework/platform/: Makefile  platform.h
gui-framework/platform/wayland/: wl_context.c  wl_input.c  wl_internal.h  wl_window.c
gui-framework/rhi/: renderer.h
gui-framework/rhi/opengl/: opengl.c
gui-framework/rhi/vulkan/: vk_buffer.c  vk_context.c  vk_internal.h  vk_pipeline.c  vk_swapchain.c  vk_sync.c  vk_texture.c
gui-framework/tests/: CMakeLists.txt  test_input.c  test_lifecycle.c  test_rhi_boot.c  test_runner.h
gui-framework/ui/: Makefile  README.md  context.c  internal.h  layout.c  layout.h  lib.h  theme.c  theme.h  widgets.c
gui-framework/ui/render/: render2d.c
gui-framework/ui/window/: window.c
gui/epa/: epa.h
gui/epa/navigator/: nav_context.c  nav_input.c  nav_internal.h  nav_window.c
gui/epa/wayland/: pointer-constraints-client-protocol.h  pointer-constraints-protocol.c  relative-pointer-client-protocol.h  relative-pointer-protocol.c  wl_context.c  wl_input.c  wl_internal.h  wl_window.c  xdg-shell-client-protocol.h  xdg-shell-protocol.c
gui/rhi/: rhi.h
gui/rhi/vulkan/: rhi_vulkan.c  vk_buffer.c  vk_context.c  vk_internal.h  vk_pipeline.c  vk_swapchain.c  vk_sync.c  vk_texture.c
gui/rhi/webgpu/: rhi_webgpu.c  wgpu_buffer.c  wgpu_cmd.c  wgpu_internal.h  wgpu_pipeline.c  wgpu_swapchain.c  wgpu_texture.c
gui/tests/: CMakeLists.txt  test_input.c  test_lifecycle.c  test_rhi_boot.c  test_runner.h
gui/ui/: context.c  internal.h  layout.c  layout.h  lib.h  theme.c  theme.h  widgets.c
gui/ui/render/: font.h  font_system.c  font_system.h  render2d.c
gui/ui/window/: window.c
lua/puc/: CMakeLists.txt
math/: CMakeLists.txt  Makefile  README.md  bhs_math.h  bhs_math_assert.h  core.h  mat4.c  mat4.h  units.h  vec4.c  vec4.h
math/spacetime/: README.md  kerr.c  kerr.h  schwarzschild.c  schwarzschild.h
math/tensor/: README.md  tensor.c  tensor.h
math/tests/: README.md  test_core.c
src/: CMakeLists.txt  Makefile  README.md  app_state.c  app_state.h  config.mk  main.c
src/assets/shaders/: blackhole.comp  grid.frag  grid.vert  grid_fiel.comp  line.vert  physics.c  planet.frag  planet.vert  postprocess.comp
src/cmd/: Makefile  main.c
src/cmd/debug/: telemetry.c  telemetry.h
src/debug/: telemetry.c  telemetry.h
src/engine/: Makefile  README.md  engine.c  engine.h  physics.c  physics.h  well.h
src/engine/body/: body.h  body_dynamics.c  body_factory.c
src/engine/components/: components.h
src/engine/disk/: disk.h
src/engine/geodesic/: geodesic.h
src/engine/geometry/: mesh_gen.c  mesh_gen.h
src/engine/integrator/: integrator.c  integrator.h
src/engine/planets/: blackhole.c  dwarf_planets.c  earth.c  jupiter.c  mars.c  mercury.c  neptune.c  planet.h  saturn.c  sun.c  uranus.c  venus.c
src/engine/presets/: presets.c  presets.h
src/engine/render_system/: render_system.c
src/engine/scene/: README.md  scene.c  scene.h
src/engine/shaders/: README.md  grid_fiel.comp
src/engine/spacetime/: README.md  spacetime.h  spacetime_data.c  spacetime_internal.h  spacetime_physics.c
src/engine/systems/: celestial_system.c  celestial_system.h  gravity_system.c  gravity_system.h  physics_system.c  physics_system.h
src/engine/world/: world.c
src/hal/: Makefile
src/hal/gpu/: Makefile
src/hal/os/: README.md
src/hal/rhi/: rhi.h
src/input/: input_layer.c  input_layer.h
src/lib/: Makefile  core.h
src/lib/ecs/: ecs.c  ecs.h  (+2 more)
src/math/: mat4.c  mat4.h
src/simulation/: factories.c  scenario_mgr.c  scenario_mgr.h  simulation_init.c  simulation_init.h
src/system/: application.c  application.h  config.c  config.h
src/ui/: Makefile  README.md
src/visual/: bhs_fabric.c
tests/: CMakeLists.txt  repro_issue.c  test_bhs_fabric.c  test_scene_lifecycle.c  test_svg_manual.c
tests/integration/: Makefile  test_ui.c  test_window.c
tests/unit/: test_core_math.c  test_disk.c  test_gravity_logic.c  test_png_loader.c
(+158 files in other folders)
